# multirec

./: .travis.yml  ANNOUNCE  CREDITS  IndexFix.agda  LICENSE  multirec.cabal
agda/: IndexFix.agda
examples/: AST.hs  ASTExamples.hs  ASTTHUse.hs  ASTUse.hs  All.hs  BaseFExample.hs  BetterFoldExample.hs  ComposeExample.hs  GRose.hs  J.hs  ListRep.hs  Single.hs  SingleExamples.hs  SingleTHUse.hs  SingleUse.hs  THGen.hs  THUse.hs  VarTypes.hs
examples/gpbench/: BinTreeReps.hs  BinTreeRepsF.hs  CompanyReps.hs  FoldTree.lhs  FullTree.lhs  GEq.lhs  GMap.lhs  ListRep.hs  ListRepF.hs  Paradise.lhs  TreeReps.hs
src/: AST.hs  Base.hs  Compos.hs  ComposTest.hs  HMap.hs  TEq.hs  Transform.hs  Void.hs  ZigZag.hs  Zipper.hs  ZipperTest.hs  multirec.cabal
src/Generics/: MultiRec.hs
src/Generics/MultiRec/: Base.hs  BaseF.hs  BetterFold.hs  BetterFoldK.hs  Compos.hs  ComposF.hs  ConNames.hs  Constructor.hs  Eq.hs  EqF.hs  Fold.hs  FoldAlg.hs  FoldAlgK.hs  FoldF.hs  FoldK.hs  GMap.hs  GMapF.hs  GZipWith.hs  Gen.hs  GenSimple.hs  HFix.hs  HFunctor.hs  HFunctorF.hs  MultiParam.hs  Read.hs  Show.hs  Simple.agda  TEq.hs  TH.hs
src/Generics/MultiRec/Elems/: One.hs
src/Generics/MultiRec/MultiParam/: List.hs  One.hs  RTree.hs  Tree.hs  Two.hs
