name:			multirec
version:		0.1
license:		BSD3
license-file:		LICENSE
author:			dgp-haskell
maintainer:		dgp-haskell
synopsis:		Generic programming with systems of recursive datatypes
stability:		provisional
build-type:		Simple
cabal-version:		>= 1.2.1
hs-source-dirs:		src
exposed-modules:	Generics.MultiRec.Base,
			Generics.MultiRec.HFunctor,
			Generics.MultiRec.Fold,
			Generics.MultiRec.Compos
extra-source-files:	examples/AST.hs
build-depends:		base >= 3.0 
